--- a/src/web.public/public/stylesheets/partials/_mixins.scss
+++ b/src/web.public/public/stylesheets/partials/_mixins.scss
@@ -121,7 +121,7 @@
   display: block;
 
   &:active {
-    background-color: $light-drawing-colour;
+    background-color: $pale-main-spot-colour;
   }
 }
 
