--- a/src/web.public/public/stylesheets/partials/_mixins.scss
+++ b/src/web.public/public/stylesheets/partials/_mixins.scss
@@ -6,6 +6,11 @@
   content: $content;
 }
 
+@mixin small-icon {
+  font-size: 16px;
+  line-height: 16px;
+}
+
 @mixin medium-icon {
   font-size: 20px;
   line-height: 20px;
